--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -206,7 +206,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	padding: 2em;
+	padding: 3em;
 	height: 100vh;
 	color: white;
 	text-align: center;
@@ -422,7 +422,7 @@ body {
 //
 
 .trainings {
-	padding: 4em;
+	padding: 3em;
 
 	.trainings-list {
 		padding: 2em;
@@ -520,7 +520,7 @@ body {
 
 .team {
 	position: relative;
-	padding: 2em;
+	padding: 3em;
 	color: white;
 	text-align: center;
 	@include heroImages('/src/img/bonzai-logo.jpg');
@@ -567,7 +567,7 @@ body {
 			z-index: 10;
 		}
 
-		.question-btn:hover~.team__card-text {
+		.question-btn:hover ~ .team__card-text {
 			clip-path: circle(120% at 50% 90%);
 		}
 
@@ -584,14 +584,14 @@ body {
 			font-size: 1.5rem;
 			background-color: rgba(0, 0, 0, 0.85);
 			clip-path: circle(0 at 50% 90%);
-			transition: clip-path .8s;
+			transition: clip-path 0.8s;
 
 			.card-title-name {
 				// margin-bottom: 0.2em;
 				color: $gold;
 			}
 
-			.card-title-training{
+			.card-title-training {
 				margin-bottom: 1em;
 				font-size: 1.6rem;
 				color: $dark-white;
@@ -614,9 +614,137 @@ body {
 	.three {
 		background-image: url('/src/img/IMG_6174.jpg');
 	}
+}
 
+//
+// GALLERY
+//
 
+.gallery {
+	padding: 3em;
 
+	.wrapper {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		padding: 10px;
+		padding: 2em;
+		margin-bottom: 4em;
+		max-width: 1100px;
+	}
+
+	.wrapper .gallery-boxes {
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	.gallery-boxes span {
+		display: flex;
+		width: 100%;
+	}
+
+	.gallery-boxes .gallery-box {
+		padding: 0.5em;
+		width: calc(100% / 3);
+	}
+
+	.gallery-boxes .gallery-box img {
+		width: 100%;
+		vertical-align: middle;
+		transition: transform 0.3s ease;
+	}
+
+	.gallery-boxes .gallery-box:hover img {
+		transform: scale(1.01);
+	}
+
+	.preview-box {
+		position: fixed;
+		max-width: 700px;
+		width: 100%;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%) scale(0.9);
+		background: #fff;
+		padding: 0 5px 5px 5px;
+		opacity: 0;
+		pointer-events: none;
+		border-radius: 3px;
+		box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+	}
+
+	.preview-box.show {
+		opacity: 1;
+		pointer-events: auto;
+		transform: translate(-50%, -50%) scale(1);
+		transition: transform .3s ease;
+	}
+
+	.preview-box .details {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding: 12px 15px 12px 10px;
+	}
+
+	.preview-box .details .icon{
+		cursor: pointer;
+		transition: transform .3s ease;
+	}
+
+	.preview-box .details .icon:hover {
+		transform: scale(1.5);
+	}
+
+	.details .title {
+		display: flex;
+		font-size: 1.5rem;
+		font-weight: 400;
+	}
+
+	.details .title p {
+		margin: 0 5px;
+	}
+
+	.details .title p.current-img {
+		font-weight: 500;
+	}
+
+	.preview-box .img-box {
+		display: flex;
+		width: 100%;
+	}
+
+	.img-box .slide {
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		width: 60px;
+		height: 50px;
+		line-height: 50px;
+		text-align: center;
+		color: #fff;
+		font-size: 3rem;
+		transition: transform .3s ease;
+		cursor: pointer;
+	}
+
+	.img-box .slide.prev {
+		left: 0;
+	}
+
+	.img-box .slide.next {
+		right: 0;
+	}
+
+	.img-box .slide:hover {
+		transform: scale(1.5);
+	}
+
+	.preview-box .img-box img {
+		width: 100%;
+		border-radius: 0 0 3px 3px;
+	}
 }
 
 //
@@ -824,6 +952,13 @@ body {
 		}
 	}
 
+	.gallery {
+		.gallery-boxes .gallery-box {
+			padding: 4px;
+			width: 100%;
+		}
+	}
+
 	// .footer {
 	// 	text-align: center;
 	// 	&__box {
@@ -895,6 +1030,13 @@ body {
 			&-img {
 				margin-bottom: 0;
 			}
+		}
+	}
+
+	.gallery {
+		.gallery-boxes .gallery-box {
+			padding: 4px;
+			width: 100%;
 		}
 	}
 }
@@ -987,6 +1129,13 @@ body {
 			p {
 				padding: 0.25em;
 			}
+		}
+	}
+
+	.gallery {
+		.gallery-boxes .gallery-box {
+			padding: 4px;
+			width: calc(100% / 2);
 		}
 	}
 }
@@ -1105,6 +1254,13 @@ body {
 				width: 50%;
 				height: auto;
 			}
+		}
+	}
+
+	.gallery {
+		.gallery-boxes .gallery-box {
+			padding: 4px;
+			width: calc(100% / 3);
 		}
 	}
 }
