Made some changes in section gallery

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -671,13 +671,14 @@ body {
 		pointer-events: none;
 		border-radius: 3px;
 		box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+		z-index: 5;
 	}
 
 	.preview-box.show {
 		opacity: 1;
 		pointer-events: auto;
 		transform: translate(-50%, -50%) scale(1);
-		transition: transform .3s ease;
+		transition: transform 0.3s ease;
 	}
 
 	.preview-box .details {
@@ -687,9 +688,9 @@ body {
 		padding: 12px 15px 12px 10px;
 	}
 
-	.preview-box .details .icon{
+	.preview-box .details .icon {
 		cursor: pointer;
-		transition: transform .3s ease;
+		transition: transform 0.3s ease;
 	}
 
 	.preview-box .details .icon:hover {
@@ -725,8 +726,9 @@ body {
 		text-align: center;
 		color: #fff;
 		font-size: 3rem;
-		transition: transform .3s ease;
+		transition: transform 0.3s ease;
 		cursor: pointer;
+		z-index: 2;
 	}
 
 	.img-box .slide.prev {
@@ -744,6 +746,16 @@ body {
 	.preview-box .img-box img {
 		width: 100%;
 		border-radius: 0 0 3px 3px;
+	}
+
+	.gallery-shadow {
+		position: fixed;
+		display: none;
+		top: 0;
+		left: 0;
+		height: 100%;
+		width: 100%;
+		background: rgba(0, 0, 0, 0.4);
 	}
 }
 
