--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -438,19 +438,19 @@ body {
 		font-size: 3rem;
 	}
 
-	&__top {
-		&-img {
-			text-align: center;
+	// &__top {
+	// 	&-img {
+	// 		text-align: center;
 
-			img {
-				margin-top: 2em;
-				margin-bottom: 3em;
-				width: 60%;
-				border-radius: 10px;
-				box-shadow: 0 0 20px rgb(219, 144, 4);
-			}
-		}
-	}
+	// 		img {
+	// 			margin-top: 2em;
+	// 			margin-bottom: 3em;
+	// 			width: 60%;
+	// 			border-radius: 10px;
+	// 			box-shadow: 0 0 20px rgb(219, 144, 4);
+	// 		}
+	// 	}
+	// }
 
 	&__box {
 		display: flex;
@@ -491,11 +491,62 @@ body {
 			margin-bottom: 1em;
 		}
 
-		img {
-			width: 100%;
-			height: auto;
-			border-radius: 10px;
-			box-shadow: 0 0 20px rgb(219, 144, 4);
+		&-box {
+			position: relative;
+			display: flex;
+			flex-wrap: wrap;
+			// flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			padding: 1em;
+			font-family: "Noto Sans", sans-serif;
+			max-width: 1100px;
+			// height: 400px;
+			color: #fff;
+			background-image: url(../../src/img/bonzai-logo.jpg);
+			background-position: center;
+			background-size: contain;
+			background-repeat: no-repeat;
+			border-radius: 8px;
+			overflow: hidden;
+			z-index: 0;
+
+			.trainings-shadow {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				background-color: rgba(0, 0, 0, 0.85);
+				z-index: -5;
+			}
+
+			.card {
+				width: 30%;
+				
+				.card-title {
+					font-size: 2rem;
+					color: $gold;
+				}
+
+				.card-list {
+					text-align: left;
+					padding: 1em .5em;
+					list-style: none;
+
+					li {
+						display: flex;
+						justify-content: center;
+						align-items: center;
+						font-size: 1.5rem;
+
+						.hour {
+							font-weight: bold;
+							margin: 0.25em .25em 0.25em 0;
+						}
+					}
+				}
+			}
 		}
 
 		&-text {
@@ -964,6 +1015,16 @@ body {
 		}
 	}
 
+	.trainings {
+		.trainings__plan-box {
+			flex-direction: column;
+
+			.card {
+				width: 100%;
+			}
+		}
+	}
+
 	.gallery {
 		.gallery-boxes .gallery-box {
 			padding: 4px;
@@ -1043,6 +1104,14 @@ body {
 				margin-bottom: 0;
 			}
 		}
+
+		&__plan-box {
+			flex-direction: column;
+
+			.card {
+				width: 100%;
+			}
+		}
 	}
 
 	.gallery {
@@ -1118,6 +1187,18 @@ body {
 			img {
 				width: 75%;
 				height: auto;
+			}
+		}
+
+		&__plan-box {
+			flex-direction: row;
+
+			.card {
+				width: 30%;
+
+				.card-title {
+					font-size: 2.5rem;
+				}
 			}
 		}
 	}
@@ -1262,9 +1343,23 @@ body {
 				margin-bottom: 1em;
 			}
 
-			img {
-				width: 50%;
-				height: auto;
+			&-box {
+				flex-direction: row;
+	
+				.card {
+					width: 30%;
+
+					.card-title {
+						font-size: 2.75rem;
+					}
+
+					.card-list {
+						
+						li {
+							font-size: 2rem;
+						}
+					}
+				}
 			}
 		}
 	}
