--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -266,10 +266,10 @@ body {
 		text-align: center;
 		flex-wrap: wrap;
 	}
-	
+
 	&__card {
 		font-family: 'Poppins', sans-serif;
-		height: 320px;
+		height: 350px;
 		width: 30%;
 		margin: 2em 1em;
 		background: #fff;
@@ -349,6 +349,38 @@ body {
 		}
 	}
 }
+
+// 
+// NEWS - PODSTRONA 
+// 
+
+.box {
+	font-family: 'Poppins', sans-serif;
+	margin: 3em 0;
+	height: 100%;
+	
+	.img-subpage {
+		margin-right: 2em;
+		margin-bottom: 2em;
+		float: left;
+		width: 50%;
+	}
+	.title-subpage {
+		margin-bottom: .75em;
+		text-align: center;
+		font-size: 3.5rem;
+		font-weight: bold;
+	}
+
+	.text-box-subpage {
+		font-size: 1.75rem;
+
+		.text {
+			margin: 0.5em 0;
+		}
+	}
+}
+
 
 // .panel__option-one {
 // 	display: none;
@@ -528,7 +560,6 @@ body {
 			padding: 1em;
 			font-family: 'Noto Sans', sans-serif;
 			max-width: 1100px;
-			// height: 400px;
 			color: #fff;
 			background-image: url(../../src/img/bonzai-logo.jpg);
 			background-position: center;
@@ -544,7 +575,7 @@ body {
 				left: 0;
 				width: 100%;
 				height: 100%;
-				background-color: rgba(0, 0, 0, 0.85);
+				background-color: rgba(0, 0, 0, 0.9);
 				z-index: -5;
 			}
 
@@ -552,22 +583,24 @@ body {
 				width: 30%;
 
 				.card-title {
+					text-align: center;
 					font-size: 2rem;
 					color: $gold;
 				}
 
 				.card-list {
-					text-align: left;
-					padding: 1em 0.5em;
+					// text-align: left;
+					padding: 1em 2em;
 					list-style: none;
 
 					li {
 						display: flex;
-						justify-content: center;
+						justify-content: space-between;
 						align-items: center;
 						font-size: 1.5rem;
 
 						.hour {
+							// justify-content: flex-start;
 							font-weight: bold;
 							margin: 0.25em 0.25em 0.25em 0;
 						}
@@ -1009,7 +1042,6 @@ body {
 	}
 
 	.news {
-
 		&__card {
 			width: 100%;
 
@@ -1061,6 +1093,18 @@ body {
 
 			.card {
 				width: 100%;
+
+				.card-title {
+					font-size: 2.25rem;
+				}
+
+				.card-list {
+					padding: 0.5em .75em;
+
+					li {
+						font-size: 1.5rem;
+					}
+				}
 			}
 		}
 	}
@@ -1102,7 +1146,6 @@ body {
 	}
 
 	.news {
-
 		&__card {
 			width: 80%;
 
@@ -1142,11 +1185,18 @@ body {
 			flex-direction: row;
 
 			.card {
-				width: 45%;
+				width: 50%;
+
+				.card-title {
+					font-size: 2rem;
+				}
 
 				.card-list {
+					padding: 0.5em .75em
+					;
+
 					li {
-						font-size: 1.8rem;
+						font-size: 1.75rem;
 					}
 				}
 			}
@@ -1177,8 +1227,11 @@ body {
 	}
 
 	.nav {
-		.nav__link {
-			font-size: 3.5rem;
+
+		.nav__links {
+			.nav__link {
+				font-size: 2.75rem;
+			}
 		}
 	}
 
@@ -1190,7 +1243,6 @@ body {
 	}
 
 	.news {
-
 		&__card {
 			width: 45%;
 
@@ -1237,7 +1289,15 @@ body {
 				width: 30%;
 
 				.card-title {
-					font-size: 2.5rem;
+					font-size: 2rem;
+				}
+
+				.card-list {
+					padding: 0.75em .75em;
+
+					li {
+						font-size: 1.5rem;
+					}
 				}
 			}
 		}
@@ -1390,12 +1450,14 @@ body {
 					width: 30%;
 
 					.card-title {
-						font-size: 2.75rem;
+						font-size: 2.5rem;
 					}
 
 					.card-list {
+						padding: 0.75em 1.5em;
+
 						li {
-							font-size: 2rem;
+							font-size: 1.75rem;
 						}
 					}
 				}
@@ -1417,7 +1479,6 @@ body {
 	}
 
 	.news {
-
 		&__card {
 			width: 30%;
 
@@ -1426,4 +1487,28 @@ body {
 			}
 		}
 	}
+
+.trainings {
+
+	&__plan {
+	
+		&-box {
+	
+			.card {
+	
+				.card-title {
+					font-size: 3rem;
+				}
+	
+				.card-list {
+					li {
+						font-size: 2.25rem;
+					}
+				}
+			}
+		}
+	}
+
+}
+
 }
